# isac-drl

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: architecture.md
environment/: channel_model.py  isac_env.py  mimo_system.py  v2x_scenario.py
evaluation/: evaluate_agent.py  pareto_curve.py  plot_results.py
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_semantic.json  GRAPH_REPORT.md  graph.html  graph.json
logs/: classical_baseline.npy
logs/ddpg_isac/DDPG_1/: events.out.tfevents.1779196479.Mac.fritz.box.53521.0
logs/ddpg_isac/DDPG_2/: events.out.tfevents.1779196504.Mac.fritz.box.53527.0
logs/ddpg_isac/DDPG_3/: events.out.tfevents.1779196524.Mac.fritz.box.53540.0
models/ddpg_isac_final/: vecnormalize.pkl
notebooks/: train_colab.ipynb
scratch/: build_graph.py  label_communities.py  merge_extractions.py
tests/: test_channel_model.py  test_environment.py  test_reward.py
training/: classical_baseline.py  train_ddpg.py
utils/: config.py  reward_config.py
